Save wavelength only as floating point numbers.